--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint-fix": "eslint . --ext .tsx --ext .ts --fix"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
