--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.12.3",
     "@reduxjs/toolkit": "^1.9.5",
+    "graphql": "^16.6.0",
     "graphql-request": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -23,7 +24,6 @@
     "sass": "^1.59.3",
     "uuid": "^9.0.0",
     "vite-plugin-eslint": "^1.8.1"
-
   },
   "devDependencies": {
     "@types/node": "^18.16.3",
