--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "@reduxjs/toolkit": "^1.9.5",
     "graphql": "^16.6.0",
     "graphql-request": "^6.0.0",
+    "i18next": "^22.4.15",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-i18next": "^12.2.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.0",
     "react-syntax-highlighter": "^15.5.0",
