--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.12.3",
     "@reduxjs/toolkit": "^1.9.5",
+    "firebase": "^9.22.0",
     "graphql": "^16.6.0",
     "graphql-request": "^6.0.0",
     "i18next": "^22.4.15",
@@ -21,6 +22,7 @@
     "i18next-http-backend": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.43.9",
     "react-i18next": "^12.2.2",
     "react-redux": "^8.0.5",
